# adaptive-lora-thesis

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-qlora.txt  requirements.txt
configs/: eval.yaml  lora_r8.yaml  lora_r8_gsm8k_quick.yaml  ours_pso_rank_lora.yaml  pso_search.yaml  qlora_r8.yaml  train_lora.yaml  train_qlora.yaml
data/: README.md
data/samples/: instruction_sample.jsonl
experiments/rank_patterns/: example_rank_pattern.json
papers/: literature_matrix.md
scripts/: 02_train_lora.sh  02_train_qlora.sh  evaluate.py  prepare_data.py  search_pso_rank.py  train_lora.py
src/: data.py  evaluate.py  model.py  train_lora.py  train_qlora.py
src/adaptive_lora_thesis/: __init__.py  config.py  data.py  lora.py  pso.py
src/analysis/: __init__.py  make_tables.py  plot_results.py  utils.py
src/rank_search/: __init__.py  build_rank_pattern.py  fitness.py  importance.py  pso.py
tests/: test_analysis.py  test_data.py  test_importance.py  test_pso.py  test_rank_search.py
